--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,7 +18,8 @@
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.8.2",
     "react-transition-group": "^4.4.5",
-    "recharts": "^2.8.0"
+    "recharts": "^2.8.0",
+    "rollup": "^4.46.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
