feat : added subcategories system

--- a/Backend/env.example
+++ b/Backend/env.example
@@ -1,5 +1,5 @@
 # Database
-MONGODB_URI=mongodb://localhost:27017/truview
+MONGODB_URI=mongodb://localhost:27017/truviews
 
 # JWT Secret
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
