--- a/Backend/package.json
+++ b/Backend/package.json
@@ -26,8 +26,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
-    "multer-s3": "^3.0.1",
-    "nodemailer": "^6.10.1"
+    "multer-s3": "^3.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
