--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -7,18 +7,22 @@ JWT_SECRET=your-jwt-secret-key-here
 # Server Configuration
 PORT=5000
 
-# Amazon SES Configuration
+# AWS S3 Configuration (for file uploads)
 AWS_ACCESS_KEY_ID=your-aws-access-key-id
 AWS_SECRET_ACCESS_KEY=your-aws-secret-access-key
 AWS_REGION=us-east-1
+AWS_S3_BUCKET=your-s3-bucket-name
+AWS_CLOUDFRONT_DISTRIBUTION_ID=your-cloudfront-distribution-id
+AWS_CLOUDFRONT_DOMAIN=your-cloudfront-domain.cloudfront.net
 
-# SES Email Configuration
-SES_FROM_EMAIL=noreply@truviews.in
-SES_FROM_NAME=TruView Team
-
-# Optional: SES Email Templates (if using SES templates instead of HTML emails)
-# SES_VERIFICATION_TEMPLATE=verification-otp-template
-# SES_PASSWORD_RESET_TEMPLATE=password-reset-otp-template
+# Nodemailer Email Configuration
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_SECURE=false
+EMAIL_USER=your-email@gmail.com
+EMAIL_PASSWORD=your-app-specific-password
+EMAIL_FROM_EMAIL=noreply@truviews.in
+EMAIL_FROM_NAME=TruViews Team
 
 # CORS Configuration (for production)
 NODE_ENV=development
