--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,7 +13,6 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.490.0",
-    "@aws-sdk/client-ses": "^3.908.0",
     "aws-sdk": "^2.1692.0",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
@@ -27,7 +26,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
-    "multer-s3": "^3.0.1"
+    "multer-s3": "^3.0.1",
+    "nodemailer": "^6.9.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
