--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -15,12 +15,8 @@ AWS_S3_BUCKET=your-s3-bucket-name
 AWS_CLOUDFRONT_DISTRIBUTION_ID=your-cloudfront-distribution-id
 AWS_CLOUDFRONT_DOMAIN=your-cloudfront-domain.cloudfront.net
 
-# Nodemailer Email Configuration
-EMAIL_HOST=smtp.gmail.com
-EMAIL_PORT=587
-EMAIL_SECURE=false
-EMAIL_USER=your-email@gmail.com
-EMAIL_PASSWORD=your-app-specific-password
+# Brevo Email Configuration
+BREVO_API_KEY=your-brevo-api-key-here
 EMAIL_FROM_EMAIL=noreply@truviews.in
 EMAIL_FROM_NAME=TruViews Team
 
