fix: changed email service provider to google smtp

--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -15,9 +15,10 @@ AWS_S3_BUCKET=your-s3-bucket-name
 AWS_CLOUDFRONT_DISTRIBUTION_ID=your-cloudfront-distribution-id
 AWS_CLOUDFRONT_DOMAIN=your-cloudfront-domain.cloudfront.net
 
-# Brevo Email Configuration
-BREVO_API_KEY=your-brevo-api-key-here
-EMAIL_FROM_EMAIL=noreply@truviews.in
+# Gmail Email Configuration
+GMAIL_USER=your-gmail-address@gmail.com
+GMAIL_APP_PASSWORD=your-16-character-app-password
+EMAIL_FROM_EMAIL=your-gmail-address@gmail.com
 EMAIL_FROM_NAME=TruViews Team
 
 # CORS Configuration (for production)
