fix: email services in server

--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -15,7 +15,7 @@ AWS_S3_BUCKET=your-s3-bucket-name
 AWS_CLOUDFRONT_DISTRIBUTION_ID=your-cloudfront-distribution-id
 AWS_CLOUDFRONT_DOMAIN=your-cloudfront-domain.cloudfront.net
 
-# Gmail Email Configuration
+# Gmail Email Configuration (Fast Async Email Service)
 GMAIL_USER=your-gmail-address@gmail.com
 GMAIL_APP_PASSWORD=your-16-character-app-password
 EMAIL_FROM_EMAIL=your-gmail-address@gmail.com
