feat: Added multilingual trans using google trans api

--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -23,3 +23,6 @@ EMAIL_FROM_NAME=TruViews Team
 
 # CORS Configuration (for production)
 NODE_ENV=development
+
+# Google Cloud Translation API
+GOOGLE_TRANSLATE_API_KEY=your-google-translate-api-key
