--- a/Backend/package.json
+++ b/Backend/package.json
@@ -28,7 +28,8 @@
     "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
-    "nodemailer": "^7.0.10"
+    "nodemailer": "^7.0.10",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
