--- a/Frontend/public/manifest.json
+++ b/Frontend/public/manifest.json
@@ -9,13 +9,13 @@
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "/assets/logo.png",
+      "src": "/assets/favicon.jpeg",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/assets/logo.png",
+      "src": "/assets/favicon.jpeg",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
@@ -31,7 +31,7 @@
       "url": "/discover",
       "icons": [
         {
-          "src": "/assets/logo.png",
+          "src": "/assets/favicon.jpeg",
           "sizes": "96x96"
         }
       ]
@@ -43,7 +43,7 @@
       "url": "/submit",
       "icons": [
         {
-          "src": "/assets/logo.png",
+          "src": "/assets/favicon.jpeg",
           "sizes": "96x96"
         }
       ]
